Fix spacing on smaller screens.

--- a/assets/sass/components/analytics-4/audience-segmentation/_googlesitekit-audience-segmentation-error.scss
+++ b/assets/sass/components/analytics-4/audience-segmentation/_googlesitekit-audience-segmentation-error.scss
@@ -21,7 +21,11 @@
 		border: 2px solid $c-utility-error;
 
 		.googlesitekit-audience-segmentation-error__widget-primary-cell {
-			padding: 20px 36px;
+			padding: 20px;
+
+			@media (min-width: $bp-nonMobile) {
+				padding: 20px 36px;
+			}
 		}
 
 		.googlesitekit-publisher-win__title {
@@ -30,9 +34,10 @@
 			font-size: $fs-title-lg;
 			font-weight: $fw-medium;
 			line-height: $lh-title-lg;
-			margin: 14px 0;
+			margin: 0 0 14px;
 
 			@media (min-width: $bp-nonMobile) {
+				margin: 14px 0;
 				place-content: start;
 			}
 		}
